fixed bug #2592 mysqldump doesn't quote "tricky" names correctly